--- a/src/component/BeerCard/BeerCard.scss
+++ b/src/component/BeerCard/BeerCard.scss
@@ -11,6 +11,7 @@
         font-size: 12px;
         background-color: lightgray;
         border-radius: 3px;
+        margin-top: 10px;
     }
     &__image {
         display: absolute;
