--- a/src/component/Filter/Filter.scss
+++ b/src/component/Filter/Filter.scss
@@ -1,5 +1,7 @@
 .filter-checkbox {
     text-align: center;
+    color: orange;
+    font-weight: bold;
 
     &__input {
         margin: 20px 5px 10px 10px;
