--- a/src/component/FilterList/FilterList.scss
+++ b/src/component/FilterList/FilterList.scss
@@ -5,4 +5,14 @@
     flex-direction: column;
     align-items: flex-start;
     margin-left: 25px;
+
+    &__filter{
+        text-align: center;
+        color: orange;
+        font-weight: bold;
+    
+        &__input {
+            margin: 20px 5px 10px 10px;
+        }
+    }
 }
